# GhostCode

./: .env  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
.github/workflows/: ping-space.yml
GhostCode/: README.md
env/: environment.py  filesystem.py  graders.py  tasks.py
models/: models.py
server/: app.py
