[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ghostcode"
version = "0.1.0"
description = "RL environment for autonomous debugging of legacy software systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "openenv-core>=0.2.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Madhesh4124/GhostCode"
Repository = "https://github.com/Madhesh4124/GhostCode"